--- a/src/app/pet/pet.component.html
+++ b/src/app/pet/pet.component.html
@@ -1,2 +1,4 @@
-<app-pet-list></app-pet-list>
-<app-pet-detail></app-pet-detail>
+<div class="pet">
+  <app-pet-list></app-pet-list>
+  <app-pet-detail></app-pet-detail>
+</div>
