--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,8 @@
-<app-navbar></app-navbar>
-<app-pet></app-pet>
+<div class="app">
+  <div class="navbar">
+    <app-navbar></app-navbar>
+  </div>
+  <div class="content">
+    <app-pet></app-pet>
+  </div>
+</div>
