--- a/src/app/pet/pet.component.html
+++ b/src/app/pet/pet.component.html
@@ -1,4 +1,4 @@
 <div class="pet">
-  <app-pet-list></app-pet-list>
+  <app-pet-list [petList]="pets"></app-pet-list>
   <app-pet-detail></app-pet-detail>
 </div>
