--- a/src/app/pet/pet-list/pet-list.component.html
+++ b/src/app/pet/pet-list/pet-list.component.html
@@ -1,1 +1,5 @@
-<app-pet-list-item *ngFor="let pet of petList" [pet]="pet"></app-pet-list-item>
+<app-pet-list-item
+  *ngFor="let pet of petList"
+  [pet]="pet"
+  (click)="onClickPet(pet.id)"
+></app-pet-list-item>
