--- a/src/app/pet/pet-detail/pet-detail.component.html
+++ b/src/app/pet/pet-detail/pet-detail.component.html
@@ -1,6 +1,16 @@
-<div *ngIf="pet">
-  <h1>{{ pet.name }}</h1>
-  <h2>{{ pet.species }}</h2>
-  <p>{{ pet.price }} €</p>
-  <p>{{ pet.isAvailable ? "Disponible" : "Vendu" }}</p>
+<div class="pet-detail">
+  <div *ngIf="pet; else noPetSelected" class="pet-info">
+    <div class="title">
+      <h1>{{ pet.name }}</h1>
+      <h2>{{ pet.species }}</h2>
+    </div>
+    <p class="price">{{ pet.price }} €</p>
+    <p class="{{ pet.isAvailable ? 'available' : 'sold' }}">
+      {{ pet.isAvailable ? "Disponible" : "Vendu" }}
+    </p>
+  </div>
 </div>
+
+<ng-template #noPetSelected>
+  <div class="no-pet-selected" >Merci de sélectionner un animal</div>
+</ng-template>
