--- a/src/app/pet/pet-detail/pet-detail.component.html
+++ b/src/app/pet/pet-detail/pet-detail.component.html
@@ -4,6 +4,7 @@
       <h1>{{ pet.name | titlecase }}</h1>
       <h2>{{ pet.species }}</h2>
     </div>
+    <img [src]="pet.imageUrl" [alt]="pet.name" />
     <p class="price">{{ pet.price }} €</p>
     <p [class]="pet.isAvailable ? 'available' : 'sold'">
       {{ pet.isAvailable ? "Disponible" : "Vendu" }}
@@ -12,5 +13,5 @@
 </div>
 
 <ng-template #noPetSelected>
-  <div class="no-pet-selected" >Merci de sélectionner un animal</div>
+  <div class="no-pet-selected">Merci de sélectionner un animal</div>
 </ng-template>
