--- a/src/app/pet/pet.component.scss
+++ b/src/app/pet/pet.component.scss
@@ -1,17 +1,20 @@
 .pet {
   height: 100%;
-  display: flex;
 
-  app-pet-list {
-    flex: 1;
-  }
+  .pet-read-container {
+    display: flex;
+    height: 100%;
+    app-pet-list {
+      flex: 1;
+    }
 
-  app-pet-detail {
-    flex: 2;
-  }
+    app-pet-detail {
+      flex: 2;
+    }
 
-  app-pet-list,
-  app-pet-detail {
-    padding: 10px;
+    app-pet-list,
+    app-pet-detail {
+      padding: 10px;
+    }
   }
 }
