--- a/src/app/pet/add-pet/add-pet.component.html
+++ b/src/app/pet/add-pet/add-pet.component.html
@@ -1,1 +1,16 @@
-<p>add-pet works!</p>
+<form [formGroup]="petForm" (ngSubmit)="onSubmit()">
+  <input type="text" formControlName="name" placeholder="Nom" />
+
+  <select formControlName="species">
+    <option *ngFor="let spec of species" [value]="spec">{{ spec }}</option>
+  </select>
+
+  <input type="number" formControlName="price" placeholder="Prix" />
+
+  <input type="checkbox" formControlName="isAvailable" />
+  <label>Disponible</label>
+
+  <input type="text" formControlName="imageUrl" placeholder="URL de l'image" />
+
+  <button>Créer mon Animal</button>
+</form>
