--- a/src/app/pet/add-pet/add-pet.component.html
+++ b/src/app/pet/add-pet/add-pet.component.html
@@ -12,5 +12,5 @@
 
   <input type="text" formControlName="imageUrl" placeholder="URL de l'image" />
 
-  <button>Créer mon Animal</button>
+  <button [disabled]="petForm.invalid">Créer mon Animal</button>
 </form>
