--- a/src/app/pet/add-pet/add-pet.component.html
+++ b/src/app/pet/add-pet/add-pet.component.html
@@ -1,4 +1,4 @@
-<form [formGroup]="petForm" (ngSubmit)="onSubmit()">
+<form [formGroup]="petForm" (ngSubmit)="onSubmit()" class="add-pet">
   <input type="text" formControlName="name" placeholder="Nom" />
 
   <select formControlName="species">
@@ -7,8 +7,10 @@
 
   <input type="number" formControlName="price" placeholder="Prix" />
 
-  <input type="checkbox" formControlName="isAvailable" />
-  <label>Disponible</label>
+  <div>
+    <input id="availability" type="checkbox" formControlName="isAvailable" />
+    <label for="availability">Disponible</label>
+  </div>
 
   <input type="text" formControlName="imageUrl" placeholder="URL de l'image" />
 
