--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,6 +3,6 @@
     <app-navbar></app-navbar>
   </div>
   <div class="content">
-    <app-pet></app-pet>
+    <router-outlet></router-outlet>
   </div>
 </div>
