--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -1,3 +1,5 @@
 <div class="navbar">
+  <a routerLink="home">Accueil</a>
+  <a routerLink="pet">Boutique</a>
   <button (click)="onTogglePetCreation()">Créer / Consulter</button>
 </div>
