--- a/src/app/pet/pet-index/pet-list/pet-list.component.html
+++ b/src/app/pet/pet-index/pet-list/pet-list.component.html
@@ -1,4 +1,5 @@
 <div class="pet-list">
+  <button [routerLink]="['..', 'add']">Nouveau</button>
   <app-pet-list-item
     *ngFor="let pet of petList"
     [pet]="pet"
