--- a/src/app/pet/add-pet/add-pet.component.scss
+++ b/src/app/pet/add-pet/add-pet.component.scss
@@ -1,13 +1,16 @@
 .add-pet {
   height: 100%;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  gap: 20px;
 
-  input,
-  select,
-  label {
-    cursor: pointer;
+  form {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 20px;
+
+    input,
+    select,
+    label {
+      cursor: pointer;
+    }
   }
 }
