--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -1,4 +1,7 @@
 <div class="navbar">
   <a routerLink="home">Accueil</a>
   <a routerLink="pet">Boutique</a>
+  <button (click)="onToggleAuth()" [ngClass]="{ green: isAuth }">
+    {{ isAuth ? "Connecté" : "Déconnecté" }}
+  </button>
 </div>
