--- a/src/app/navbar/navbar.component.scss
+++ b/src/app/navbar/navbar.component.scss
@@ -12,5 +12,10 @@
     border-radius: 10px;
     padding: 10px;
     cursor: pointer;
+    color: red;
+
+    &.green {
+      color: green;
+    }
   }
 }
