--- a/src/styles.scss
+++ b/src/styles.scss
@@ -9,3 +9,13 @@ body {
   margin: 0;
   font-family: "Helvetica Neue";
 }
+
+// Classe générales
+
+.btn-nav {
+  border: none;
+  padding: 10px;
+  border-radius: 10px;
+  color: white;
+  background-color: blueviolet;
+}
