--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -1,6 +1,6 @@
 <div class="navbar">
-  <a routerLink="home">Accueil</a>
-  <a routerLink="pet">Boutique</a>
+  <a routerLink="home" routerLinkActive="active">Accueil</a>
+  <a routerLink="pet" routerLinkActive="active">Boutique</a>
   <button (click)="onToggleAuth()" [ngClass]="{ green: isAuth }">
     {{ isAuth ? "Connecté" : "Déconnecté" }}
   </button>
