--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
 <div class="app">
-  <div class="navbar">
+  <div class="navbar-cmp">
     <app-navbar></app-navbar>
   </div>
   <div class="content">
