--- a/src/app/pet/pet-index/pet-list/pet-list-item/pet-list-item.component.html
+++ b/src/app/pet/pet-index/pet-list/pet-list-item/pet-list-item.component.html
@@ -1,3 +1,3 @@
 <div class="pet-list-item" [routerLink]="[pet.id]" routerLinkActive="selected">
-  <p>{{ pet.name | titlecase }}</p>
+  <div>{{ pet.name | titlecase }}</div>
 </div>
