--- a/src/app/pet/pet-index/pet-list/pet-list.component.html
+++ b/src/app/pet/pet-index/pet-list/pet-list.component.html
@@ -1,7 +1,7 @@
 <div class="pet-list">
   <button class="btn-nav" [routerLink]="['..', 'add']">Nouveau</button>
   <app-pet-list-item
-    *ngFor="let pet of petList"
+    *ngFor="let pet of petList$ | async"
     [pet]="pet"
   ></app-pet-list-item>
 </div>
