--- a/src/styles.scss
+++ b/src/styles.scss
@@ -19,3 +19,6 @@ body {
   color: white;
   background-color: blueviolet;
 }
+
+/* Importing Bootstrap SCSS file. */
+@import '~bootstrap/scss/bootstrap';
